fix(settings): fix spacings

--- a/src/views/Me/Settings/Notifications/styles.module.css
+++ b/src/views/Me/Settings/Notifications/styles.module.css
@@ -1,50 +1,7 @@
-.block {
-  display: flex;
-  flex-wrap: wrap;
+.container {
+  padding: 0 var(--spacing-base);
 
-  & .item {
-    width: 100%;
-    padding: 0 var(--spacing-base);
-    margin-top: var(--spacing-base);
-    font-size: var(--font-size-sm);
-
-    & header {
-      margin-bottom: 0;
-    }
-
-    @media (--sm-up) {
-      width: 50%;
-    }
-  }
-}
-
-.setting-item {
-  @mixin flex-center-space-between;
-
-  padding: var(--spacing-loose) 0;
-
-  & + .setting-item {
-    @mixin border-top-grey;
-  }
-
-  & .description {
-    margin-top: var(--spacing-xx-tight);
-    font-size: var(--font-size-xs);
-    color: var(--color-grey);
-  }
-}
-
-.title {
-  margin: var(--spacing-loose) 0 var(--spacing-base);
-
-  & h2 {
-    margin: 0 0 var(--spacing-x-tight);
-    font-size: 1.125rem;
-    color: var(--color-black);
-  }
-
-  & p {
-    font-size: var(--font-size-sm);
-    color: var(--color-grey-dark);
+  @media (--sm-up) {
+    padding: 0;
   }
 }
